# professional

./: .gitignore  Makefile  README.md  TODO
.devcontainer/: Dockerfile  devcontainer.json
data/: professional.json
data/coverletter/: coverletter.json  coverletter.version
data/cv/: cv.json  cv.version
data/resume/: resume.version
include/: coverletter.cls  cv.cls  professional.cls
json_to_tex/: setup.cfg
json_to_tex/json_to_tex/: __init__.py  __main__.py  json_to_tex.py
template/coverletter/: coverletter.tex
template/cv/: cv.tex
template/resume/: resume.tex
