[metadata]
name = json_to_tex
version = 0.0.1
author = Brandon Mosher
author_email = code.brandon@mosher.xyz
description = Convert json to tex
long_description = file: README.md
long_description_content_type = text/markdown
url = ''
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pylatexenc

[options.entry_points]
console_scripts =
    json_to_tex = json_to_tex.__main__:main
